Fix scrollbar issues in dropdowns (#10897)
* Fix scrollbar issues in dropdowns

Fixes: https://github.com/go-gitea/gitea/pull/10835

* remove wrapping

* grammar

--- a/web_src/less/_base.less
+++ b/web_src/less/_base.less
@@ -1220,3 +1220,11 @@ i.icon.centerlock {
 .ui.attached.segment + .ui.attached.header {
     margin-top: 1rem;
 }
+
+/* limit width of all direct dropdown menu children */
+/* https://github.com/go-gitea/gitea/pull/10835 */
+.dropdown > .menu > * {
+    max-width: 300px;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
+}
